--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -1,11 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.gatech.oftentimes2000"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="10" />
+        android:minSdkVersion="15"
+        android:targetSdkVersion="15" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -13,7 +14,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Oftentimes2000"
-            android:label="@string/title_activity_oftentimes2000" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
