--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="edu.gatech.oftentimes2000"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -12,6 +16,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name=".Oftentimes2000"
             android:label="@string/app_name" >
@@ -21,6 +26,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".map.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <uses-library android:name="com.google.android.maps"/>
     </application>
 
 </manifest>
