--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -17,22 +17,31 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
+        <uses-library android:name="com.google.android.maps"/>
+        
         <activity
             android:name=".Oftentimes2000"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <activity
+            android:name=".CategorySelection"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name=".AnnouncementSelection"
+            android:label="@string/app_name" >
         </activity>
         
         <activity
             android:name=".map.MainActivity"
             android:label="@string/app_name" >
         </activity>
-        
-        <uses-library android:name="com.google.android.maps"/>
     </application>
 
 </manifest>
