--- a/app/project.properties
+++ b/app/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:15
-android.library.reference.1=../../RibbonMenu/library
+android.library.reference.1=../../../../../My Folder/My Project/Android/RibbonMenu/library
