--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -3,10 +3,18 @@
     package="edu.gatech.oftentimes2000"
     android:versionCode="1"
     android:versionName="1.0" >
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+    <permission
+        android:name="edu.gatech.oftentimes2000.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="edu.gatech.oftentimes2000.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -16,37 +24,50 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
-        <uses-library android:name="com.google.android.maps"/>
-        
+        <uses-library android:name="com.google.android.maps" />
+
         <activity
             android:name=".Oftentimes2000"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity
+            android:name=".Settings"
+            android:label="@string/app_name" >
+        </activity>
         <activity
             android:name=".CategorySelection"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name=".AnnouncementSelection"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name=".AnnouncementDetail"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name=".map.MainActivity"
             android:label="@string/app_name" >
         </activity>
+
+        <receiver
+            android:name="com.google.android.gcm.GCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="edu.gatech.oftentimes2000" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".GCMIntentService" />
     </application>
 
 </manifest>
