Server Pinger / Alarm Service

--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -35,22 +35,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity
             android:name=".Settings"
             android:label="@string/app_name" >
         </activity>
+        
         <activity
             android:name=".CategorySelection"
             android:label="@string/app_name" >
         </activity>
+        
         <activity
             android:name=".AnnouncementSelection"
             android:label="@string/app_name" >
         </activity>
+        
         <activity
             android:name=".AnnouncementDetail"
             android:label="@string/app_name" >
         </activity>
+        
         <activity
             android:name=".map.MainActivity"
             android:label="@string/app_name" >
@@ -65,6 +70,11 @@
 
                 <category android:name="edu.gatech.oftentimes2000" />
             </intent-filter>
+        </receiver>
+        
+        <receiver 
+            android:process=":remote" 
+            android:name=".ServerPingerReceiver" >
         </receiver>
 
         <service android:name=".GCMIntentService" />
