--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -37,6 +37,11 @@
         </activity>
         
         <activity
+            android:name=".Subscription"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
             android:name=".Settings"
             android:label="@string/app_name" >
         </activity>
