--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -57,7 +57,7 @@
         </activity>
         
         <activity
-            android:name=".map.MainActivity"
+            android:name=".map.MapAct"
             android:label="@string/app_name" >
         </activity>
 
